--- a/login.css
+++ b/login.css
@@ -10,7 +10,6 @@ body {
 .login {
   font-size: 55px;
   color: white;
-  padding-bottom: 15px;
 }
 .main-login {
   background: linear-gradient(90deg, rgba(125, 254, 250, 0.6), rgba(252, 76, 205, 0.6));
@@ -28,7 +27,7 @@ label {
   padding: 10px;
 }
 input {
-  border: 4px solid rgb(101, 101, 255);
+  border: 4px solid #086698;
   padding: 15px;
   width: 100%;
   outline: none;
@@ -38,7 +37,7 @@ input {
   background-color: transparent;
 }
 input:hover {
-  border: 4px solid orange;
+  border: 4px solid #e13bda;
 }
 input[placeholder="enter email here"] {
   color: black;
