--- a/login.css
+++ b/login.css
@@ -49,6 +49,7 @@ button {
   margin-top: 20px;
   margin-bottom: 30px;
   background-color: transparent;
+  cursor: pointer;
 }
 button:hover {
   color: orange;
