--- a/login.css
+++ b/login.css
@@ -19,6 +19,10 @@ body {
   margin-bottom: 300px;
   padding: 10px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 label {
   font-size: 20px;
@@ -51,4 +55,38 @@ button {
 button:hover {
   color: orange;
   background-color: grey;
+}
+@media only screen and (max-width: 1325px) {
+  body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  .main-login {
+    width: 50%;
+    height: 100%;
+    margin-left: 330px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 500px) {
+  body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  .main-login {
+    width: 50%;
+    height: 100%;
+    margin-left: 117px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
